2008-09-27  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_filter):
	* notation/mup.php (set_magic_file_hook):
	- Instead of hardcoding extra setting for Mup, add wordpress action to
	  handle any extra settings instead. More scalable, though
	  that means injecting setting names into class directly.

	* scorerender-class.php:
	- (scorerender_cache_location_match) New func. Check if cache dir and
	  cache url matches.

2008-09-24  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php: More phpdoc update.

2008-09-23  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php: phpdoc update.

2008-09-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- Move WP admin related functions to scorerender-admin.php

2008-09-20  Abel Cheung  <abelcheung@gmail.com>

	* notation/mup.php:
	- (conversion_step1) Make sure license file is used on Windows.
	- (conversion_step2) Fix transparency issues on Windows. Holy crap.

2008-09-19  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (create_temp_dir) Moved to scorerender-utils.php.

2008-09-19  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Code refactoring, move util functions to
	  scorerender-utils.php
	* class.scorerender.inc.php -> scorerender-class.php
	* Other include files moved to notation/ folder

2008-09-18  Abel Cheung  <abelcheung@gmail.com>

	* class.*.inc.php: Moved to notation/ subdirectory.
	* wp-scorerender.php: Updated file locations to reflect file move.

2008-09-18  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_update_options) Fix bug: IE transparency warning option
	  can't be turned off once it is turned on.

2008-09-18  Abel Cheung  <abelcheung@gmail.com>

	* class.{pmw,lilypond,abc,mup}.inc.php:
	- Don't add stderr redirection, let _exec handle that.

	* class.scorerender.inc.php:
	- (create_temp_dir) Set default argument for 1st argument.